--- a/Untitled6.ipynb
+++ b/Untitled6.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM1StbEXGfOYL7+ZtudyspH",
+      "authorship_tag": "ABX9TyNdQ+3b28ZmEjeLI1jG1Xeg",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2958,19 +2958,34 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "\n",
-        "# לאחר הרצת הקוד למעלה, הרץ את הקוד הבא בתא חדש:"
-      ],
+      "source": [],
       "metadata": {
-        "id": "WnVV_Ue5O6Yg"
+        "id": "WnVV_Ue5O6Yg",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 297
+        },
+        "outputId": "5c2236a1-38f6-43e1-a551-0a43439dba88"
       },
-      "execution_count": 79,
-      "outputs": []
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "FileNotFoundError",
+          "evalue": "[Errno 2] No such file or directory: '/content/your_notebook.ipynb'",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-93-5552dea061af>\u001b[0m in \u001b[0;36m<cell line: 0>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;31m# הרץ את הפונקציה\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 30\u001b[0;31m \u001b[0mclean_notebook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-93-5552dea061af>\u001b[0m in \u001b[0;36mclean_notebook\u001b[0;34m()\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mclean_notebook\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m     \u001b[0;31m# קרא את המחברת הנוכחית\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m     \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/your_notebook.ipynb'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      8\u001b[0m         \u001b[0mnotebook\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: '/content/your_notebook.ipynb'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
-      "execution_count": 80,
+      "execution_count": null,
       "metadata": {
         "id": "7MjN1SimeNF3",
         "colab": {
@@ -3473,7 +3488,7 @@
         "id": "reK9wnEirQFs",
         "cellView": "form"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3647,7 +3662,7 @@
         "id": "dS6U_8c3LJ9u",
         "cellView": "form"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3693,7 +3708,7 @@
         "cellView": "form",
         "id": "6UicnERyr2w9"
       },
-      "execution_count": 83,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4048,7 +4063,7 @@
         "cellView": "form",
         "id": "_zxzwWG8sH5r"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4115,7 +4130,7 @@
         },
         "outputId": "9e282b07-6256-4e18-939a-abe94d9020ba"
       },
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4221,7 +4236,7 @@
         "id": "_Tz0SZ-mtPdG",
         "cellView": "form"
       },
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4489,7 +4504,7 @@
         "cellView": "form",
         "id": "rqtcHXKyNNxZ"
       },
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4768,7 +4783,7 @@
         "id": "ia9n3NXHta-h",
         "cellView": "form"
       },
-      "execution_count": 88,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4900,7 +4915,7 @@
         "cellView": "form",
         "id": "M7iQ6rMIueKo"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5151,7 +5166,7 @@
         "id": "rvrW7klruiuw",
         "cellView": "form"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5282,7 +5297,7 @@
         },
         "outputId": "2a0d73aa-f60c-4071-9df7-1804439ab3bb"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
